example-service-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: ghcr.io/c089/argocd-playground-example-service:main
        name: hello
        ports:
        - containerPort: 8080
          name: hello-web
