example-service-deploy/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello
spec:
  replicas: 5
  strategy:
    canary:
      stableService: hello-stable
      canaryService: hello-canary
      steps:
        - setWeight: 0
        - setCanaryScale:
            replicas: 1
        - pause:
            duration: 10
        - setCanaryScale:
            matchTrafficWeight: true
        - setWeight: 20
        - pause:
            duration: 10
        - setWeight: 60
        - pause:
            duration: 10
        - setWeight: 80
        - pause:
            duration: 10
      trafficRouting:
        traefik:
          weightedTraefikServiceName: hello
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: ghcr.io/c089/argocd-playground-example-service:main
          name: hello
          ports:
            - containerPort: 8080
              name: hello-web
